--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Your Name | Portfolio</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f9f9f9;
+      color: #333;
+    }
+
+    header {
+      background: #222;
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      background: #111;
+      padding: 10px 0;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    section {
+      padding: 60px 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #444;
+      margin-bottom: 20px;
+    }
+
+    .project {
+      background: white;
+      padding: 20px;
+      border: 1px solid #ddd;
+      margin-bottom: 20px;
+      border-radius: 8px;
+    }
+
+    footer {
+      background: #222;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .skill {
+      background: #eee;
+      padding: 8px 12px;
+      border-radius: 6px;
+    }
+
+    a.button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Your Name</h1>
+  <p>Full Stack Developer | Problem Solver | Creator</p>
+</header>
+
+<nav>
+  <a href="#about">About</a>
+  <a href="#projects">Projects</a>
+  <a href="#skills">Skills</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section id="about">
+  <h2>About Me</h2>
+  <p>Hello! I’m a developer passionate about building useful applications and learning new technologies. I love solving problems, working in teams, and creating beautiful, functional experiences.</p>
+</section>
+
+<section id="projects">
+  <h2>Projects</h2>
+
+  <div class="project">
+    <h3>Chess Game</h3>
+    <p>An online multiplayer chess game with animations, timers, and offline mode.</p>
+    <a class="button" href="https://yourprojectlink.com" target="_blank">View Project</a>
+  </div>
+
+  <div class="project">
+    <h3>Habit Tracker</h3>
+    <p>A Flutter-based habit tracking app that lets users build and maintain positive routines.</p>
+    <a class="button" href="https://github.com/yourrepo" target="_blank">GitHub Repo</a>
+  </div>
+
+</section>
+
+<section id="skills">
+  <h2>Skills</h2>
+  <div class="skills">
+    <div class="skill">Flutter</div>
+    <div class="skill">Dart</div>
+    <div class="skill">Laravel</div>
+    <div class="skill">JavaScript</div>
+    <div class="skill">Git</div>
+    <div class="skill">Firebase</div>
+    <div class="skill">GetX</div>
+  </div>
+</section>
+
+<section id="contact">
+  <h2>Contact Me</h2>
+  <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
+  <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
+  <p>LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">yourusername</a></p>
+</section>
+
+<footer>
+  <p>© 2025 Your Name. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
